--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -49,3 +50,4 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+.unotes/*
