--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,5 @@
 		"Buckboost",
 		"robo"
 	],
+	"MarkdownPaste.path": "${workspaceRoot}/.images/${relativeFileDirname}/${fileBasenameNoExtension}/",
 }
