--- a/.github/mkdocs.yml
+++ b/.github/mkdocs.yml
@@ -7,4 +7,4 @@ repo_url: https://github.com/TaylerUva/Wiki_RTD_TEST/
 edit_uri: https://github.com/TaylerUva/Wiki_RTD_TEST/edit/main/
 site_author: Tayler Uva
 exclude_docs: |
-  !.well-known
+  !.images
