add SN logo to navigation

--- a/.github/mkdocs.yml
+++ b/.github/mkdocs.yml
@@ -4,6 +4,8 @@ site_dir: ../../site
 theme:
   name: 'readthedocs'
   custom_dir: 'theme'
+  navigation_depth: 2
+  logo: '.images/SN White Text Logo.png'
 repo_url: https://github.com/TaylerUva/Wiki_RTD_TEST/
 edit_uri: https://github.com/TaylerUva/Wiki_RTD_TEST/edit/main/
 site_author: Tayler Uva
