Added assembly standards

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"cSpell.words": [
 		"Brainbox",
 		"Buckboost",
+		"Clecos",
 		"robo"
 	],
 	"MarkdownPaste.path": "${workspaceRoot}/.images/${relativeFileDirname}/${fileBasenameNoExtension}/",
