--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,36 @@
 {
-	"cSpell.words": [
-		"Brainbox",
-		"Buckboost",
-		"Clecos",
-		"Driverstation",
-		"HDPE",
-		"Nivore",
-		"playhead",
-		"robo",
-		"SPACEBAR",
-		"WAGO"
-	],
-	"MarkdownPaste.path": "${workspaceRoot}/.images/${relativeFileDirname}/${fileBasenameNoExtension}/",
-	"editor.wordWrap": "off",
-	"diffEditor.wordWrap": "off",
-	"files.exclude": {
-		"**/*.rpyc": true,
-		"**/*.rpa": true,
-		"**/*.rpymc": true,
-		"**/cache/": true
-	},
+    "cSpell.words": [
+        "Brainbox",
+        "Buckboost",
+        "Clecos",
+        "Driverstation",
+        "HDPE",
+        "Nivore",
+        "playhead",
+        "protobot",
+        "robo",
+        "SPACEBAR",
+        "WAGO"
+    ],
+    "MarkdownPaste.path": "${workspaceRoot}/.images/${relativeFileDirname}/${fileBasenameNoExtension}/",
+    "editor.wordWrap": "off",
+    "diffEditor.wordWrap": "off",
+    "files.exclude": {
+        "**/*.rpyc": true,
+        "**/*.rpa": true,
+        "**/*.rpymc": true,
+        "**/cache/": true
+    },
+    "MarkdownPaste.applyAllRules": true,
+    "editor.formatOnSave": true,
+    // The number of spaces a tab is equal to. This setting is overridden
+    // based on the file contents when `editor.detectIndentation` is true.
+    "editor.tabSize": 4,
+    // Insert spaces when pressing Tab. This setting is overriden
+    // based on the file contents when `editor.detectIndentation` is true.
+    "editor.insertSpaces": true,
+    // When opening a file, `editor.tabSize` and `editor.insertSpaces`
+    // will be detected based on the file contents. Set to false to keep
+    // the values you've explicitly set, above.
+    "editor.detectIndentation": false
 }
